--- a/css/recipe.css
+++ b/css/recipe.css
@@ -14,7 +14,7 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
-    background-image: url("/img/lukas-blazek-EWDvHNNfUmQ-unsplash.jpg");
+    background-image: url('../img/lukas-blazek-EWDvHNNfUmQ-unsplash.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
     color: var(--darkblue);
