added html droplist and searchbar with some css styling, and started to try and set up the api

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -41,3 +41,9 @@ h1 {
 .bg-img {
     background-image:url() ;
 }
+
+div p {
+    color: black;
+    text-decoration: underline;
+    font-weight:bold ;
+}
